--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
     <section class="contactanos">
         
                     <form class="contacto">
-                        <h2>Contactanos</h2>
+                        <h2>Contactanosss</h2>
                         <div class="form-group">
                           <label>nombre completo</label>
                           <input type="text"  placeholder="pon tu nombre">
